infrastructure/security.tf
# Security Group pour l'ALB
resource "aws_security_group" "alb_sg" {
  name        = "alb-sg"
  description = "Security group pour ALB"
  vpc_id      = aws_vpc.main-vpc.id

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "alb-sg"
  }
}

# Security Group pour les instances EC2
resource "aws_security_group" "web_sg" {
  name        = "web-sg"
  description = "Security group pour instances web"
  vpc_id      = aws_vpc.main-vpc.id

  ingress {
    from_port       = 80
    to_port         = 80
    protocol        = "tcp"
    security_groups = [aws_security_group.alb_sg.id] # Autorise seulement depuis l'ALB
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "web-sg"
  }
}
